--- a/App/App.Android/App.Android.csproj
+++ b/App/App.Android/App.Android.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ECF02D86-BB1C-4375-9DA6-B696761E5FB8}</ProjectGuid>
+    <ProjectGuid>{2572D433-6713-4F53-AE1E-EC78DF47BD97}</ProjectGuid>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>XamarinFormsClient.Droid</RootNamespace>
-    <AssemblyName>XamarinFormsClient.Android</AssemblyName>
+    <RootNamespace>App.Droid</RootNamespace>
+    <AssemblyName>App.Android</AssemblyName>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
